--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "doctrine/common": "^2.0 || ^3.1",
         "doctrine/persistence": "^1.3 || ^2.1",
         "friendsofsymfony/user-bundle": "^2.0",
