--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^7.3 || ^8.0",
         "doctrine/common": "^2.0 || ^3.1",
         "doctrine/persistence": "^1.3 || ^2.1",
-        "friendsofsymfony/user-bundle": "*",
+        "fulfilionet/user-bundle": "dev-master",
         "sonata-project/admin-bundle": "^3.76",
         "sonata-project/datagrid-bundle": "^3.0.1",
         "sonata-project/doctrine-extensions": "^1.10.1",
